--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,70 @@
 {
-    "name": "yii2/template",
+    "name": "yii2-extensions/datetime-picker",
     "type": "library",
-    "description": "_____",
+    "description": "Date and time picker for Yii Framework.",
     "keywords": [
-        "_____"
+        "yii2",
+        "date",
+        "time",
+        "picker"
     ],
     "license": "mit",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
+        "npm-asset/eonasdan--tempus-dominus": "^6.7",
+        "oomphinc/composer-installers-extender": "^2.0",
+        "php-forge/html": "dev-main",
+        "yii2-extensions/asset-popper": "dev-main",
         "yiisoft/yii2": "^2.2"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.6",
+        "php-forge/support": "dev-main",
         "phpunit/phpunit": "^10.2",
+        "roave/infection-static-analysis-plugin": "^1.32",
         "yii2-extensions/phpstan": "dev-main"
     },
     "autoload": {
         "psr-4": {
-            "yii\\template\\": "src"
+            "Yii2\\Extensions\\DateTimePicker\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "yii\\template\\tests\\": "tests"
+            "Yii2\\Extensions\\DateTimePicker\\Tests\\": "tests"
         }
     },
     "extra": {
         "branch-alias": {
             "dev-main": "1.0.x-dev"
+        },
+        "config-plugin": {
+            "params": "params.php",
+            "yii2-datetime-picker": "extension.php"
+        },
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
+        "installer-types": [
+            "bower-asset",
+            "npm-asset"
+        ],
+        "installer-paths": {
+            "./node_modules/{$name}": [
+                "type:bower-asset",
+                "type:npm-asset"
+            ]
         }
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "yiisoft/yii2-composer": true
+            "yiisoft/yii2-composer": true,
+            "composer/installers": true,
+            "oomphinc/composer-installers-extender": true,
+            "infection/extension-installer": true
         }
     },
     "scripts": {
