--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 <phpunit
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd"
-    bootstrap="vendor/autoload.php"
+    bootstrap="tests/Support/bootstrap.php"
     cacheDirectory=".phpunit.cache"
     colors="true"
     executionOrder="depends,defects"
@@ -11,7 +11,7 @@
     stopOnFailure="false"
 >
     <testsuites>
-        <testsuite name="Template">
+        <testsuite name="Yii2-DateTimePicker">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
