--- a/infection.json.dist
+++ b/infection.json.dist
@@ -5,7 +5,7 @@
         ]
     },
     "logs": {
-        "text": "php:\/\/stderr",
+        "text": "infection.log",
         "stryker": {
             "report": "main"
         }
