--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,20 @@
         "picker"
     ],
     "license": "mit",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-        "npm-asset/eonasdan--tempus-dominus": "^6.7",
-        "oomphinc/composer-installers-extender": "^2.0",
-        "php-forge/html": "dev-main",
-        "yii2-extensions/asset-popper": "dev-main",
-        "yiisoft/yii2": "^2.2"
+        "npm-asset/eonasdan--tempus-dominus": "^6.9",
+        "php-forge/html": "^0.2",
+        "yii2-extensions/asset-popper": "^0.1",
+        "yiisoft/yii2": "^2.0.49 || ^2.2"
     },
     "require-dev": {
-        "maglnet/composer-require-checker": "^4.6",
-        "php-forge/support": "dev-main",
-        "phpunit/phpunit": "10.5.3",
+        "maglnet/composer-require-checker": "^4.7",
+        "php-forge/support": "^0.1",
+        "phpunit/phpunit": "^10.5",
         "roave/infection-static-analysis-plugin": "^1.34",
-        "yii2-extensions/phpstan": "dev-main"
+        "symplify/easy-coding-standard": "^12.1",
+        "yii2-extensions/phpstan": "^0.1"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +36,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "1.0.x-dev"
+            "dev-main": "0.1-dev"
         },
         "config-plugin": {
             "params": "params.php",
@@ -46,16 +44,6 @@
         },
         "config-plugin-options": {
             "source-directory": "config"
-        },
-        "installer-types": [
-            "bower-asset",
-            "npm-asset"
-        ],
-        "installer-paths": {
-            "./node_modules/{$name}": [
-                "type:bower-asset",
-                "type:npm-asset"
-            ]
         }
     },
     "config": {
@@ -63,13 +51,16 @@
         "allow-plugins": {
             "yiisoft/yii2-composer": true,
             "composer/installers": true,
-            "oomphinc/composer-installers-extender": true,
             "infection/extension-installer": true
         }
     },
     "scripts": {
         "check-dependencies": "composer-require-checker",
-        "mutation": "roave-infection-static-analysis-plugin",
+        "easy-coding-standard": "ecs check",
+        "mutation": [
+            "Composer\\Config::disableProcessTimeout",
+            "roave-infection-static-analysis-plugin"
+        ],
         "phpstan": "phpstan",
         "test": "phpunit"
     },
